--- a/BE/package.json
+++ b/BE/package.json
@@ -10,7 +10,11 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
+    "multer": "^2.0.2",
+    "mysql2": "^3.15.3",
     "nodemon": "^3.1.10"
   }
 }
