--- a/BE/package.json
+++ b/BE/package.json
@@ -10,7 +10,11 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.2",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "form-data": "^4.0.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.15.3",
     "nodemon": "^3.1.10"
   }
 }
