--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ Thumbs.db
 .env
 .env*.local
 .env.local
+.env.production
+!.env.production.example
 
 # Uploads
 uploads/
@@ -42,3 +44,4 @@ uploads/
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
+.vercel
