--- a/FE/package.json
+++ b/FE/package.json
@@ -55,6 +55,7 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.2",
     "framer-motion": "^12.23.24",
